# Insor-AI

./: package-lock.json
docs/: brainstorming-session-results-2025-11-12.md
docs/technical/: openai-endpoints.md  workspace-bridge.md
insor-app/: index.html  package-lock.json  package.json  vite.config.ts
insor-app/src/: App.tsx  env.d.ts  main.tsx  styles.css
insor-app/src-tauri/: Cargo.toml  tauri.conf.json
insor-app/src/components/: SettingsPanel.tsx
insor-app/src/config/: env.ts
insor-app/src/core/: aiSettings.tsx  workspace.tsx
insor-app/src/mocks/: demoFeed.ts
insor-app/src/primitives/: artifactManager.ts  conversation.ts  planner.ts  sandbox.ts  stateGraph.ts
insor-app/src/services/: aiClient.ts  aiStream.ts  workspaceBridge.ts
insor-app/src/utils/: id.ts  time.ts
