[package]
name = "insor-app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all", "shell-open"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[profile.dev]
incremental = true
codegen-units = 256

[profile.release]
strip = true
codegen-units = 1
lto = true
